--- a/Personal/Home/templates/resume.html
+++ b/Personal/Home/templates/resume.html
@@ -1,1 +1,17 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} 
+{% load static %}
+
+{% block resume %}
+
+<div class="container">
+    <p>Take a look at my resume below. You'll find that I have the necessary 
+    problem-solving skills to attack any problem!</p>
+</div>
+
+<div id="resume_page_img_div">
+
+    <img src="{% static 'img/Jarret_Laberdee_Resume.jpg' %}" alt="Jarret Laberdee Resume" id="resume_page_img_img">
+
+</div>
+
+{% endblock %}
