--- a/Personal/static/css/main.css
+++ b/Personal/static/css/main.css
@@ -1,61 +1,156 @@
-
 body {
-    background-color: #9FA3CC;
-    font-family: 'Merienda', cursive;
+  background-color: #9fa3cc;
+  font-family: "Merienda", cursive;
 }
 
-@media (max-width: 400px) {
-    div#main_header_inner {
-        flex-shrink: 1;
-    }
+@media only screen and (max-width: 400px) {
+  div#main_header_inner {
+    flex-direction: column;
+  }
 
-}
-
-@media (min-width: 401px) and (max-width: 550px) {}
-
-@media (min-width: 551px) and (max-width: 700px) {}
-
-@media (min-width: 701px) and (max-width: 850px) {}
-
-
-
-div#main_header_outer{
+  div#main_header_left_half {
+    flex-direction: column;
     width: 100%;
-    height: auto;
-}
+  }
 
-div#main_header_inner{
+  div#main_header_right_half {
+    flex-direction: column;
     width: 100%;
-    background-color: #6E73AB;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 10px;
+  }
 }
 
-div#main_header_left_half{
-    width: 50%;
-    display: flex;
+@media (min-width: 401px) and (max-width: 550px) {
+  div#main_header_inner {
+    flex-direction: column;
+  }
+  div#main_header_left_half {
+    flex-direction: column;
+    width: 100%;
+  }
+  div#main_header_right_half {
+    flex-direction: column;
+    width: 100%;
+  }
+}
+
+@media (min-width: 551px) and (max-width: 767px) {
+  div#main_header_inner {
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+  }
+  div#main_header_left_half {
+    flex-direction: row;
+    width: 50%;
+  }
+  div#main_header_right_half {
+    flex-direction: row;
+    width: 50%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  div#main_header_inner {
+    flex-direction: row;
+  }
+  div#main_header_left_half {
+    flex-direction: row;
+    width: 50%;
+  }
+  div#main_header_right_half {
+    flex-direction: row;
+    width: 50%;
+  }
+}
+
+@media (min-width: 993px) and (max-width: 1200px) {
+  div#main_header_inner {
+    flex-direction: row;
+  }
+  div#main_header_left_half {
+    flex-direction: row;
+    width: 50%;
+  }
+  div#main_header_right_half {
+    flex-direction: row;
+    width: 50%;
+  }
+}
+
+@media (min-width: 1201px) and (max-width: 1500px) {
+  div#main_header_inner {
+    display: flex;
+  }
+  div#main_header_left_half {
+    flex-direction: row;
+    width: 50%;
+  }
+  div#main_header_right_half {
+    flex-direction: row;
+    width: 50%;
+  }
+}
+
+@media (min-width: 1501px) {
+  div#main_header_inner {
+    display: flex;
+  }
+  div#main_header_left_half {
+    flex-direction: row;
+    width: 50%;
+  }
+  div#main_header_right_half {
+    flex-direction: row;
+    width: 50%;
+  }
+}
+
+/* Dimensions outside Reponsiveness */
+
+div#main_header_outer {
+  width: 100%;
+  height: auto;
+}
+
+div#main_header_inner {
+  display: flex;
+  width: 100%;
+  background-color: #6e73ab;
+  padding: 10px;
+}
+
+div#main_header_left_half {
+  display: flex;
 }
 
 div#main_header_left_half p {
-    margin: 0 auto;
-    color: #CFC259;
+  margin: 0 auto;
+  color: #cfc259;
 }
 
-div#main_header_right_half{
-    display: flex;
-    flex-direction: row;
-    width: 50%;
-    justify-content: center;
-    align-items: center;
+div#main_header_right_half {
+  display: flex;
 }
 
-div#main_header_right_half p {
-    margin: 0 auto;
-    color: #CFC259;
+div#main_header_right_half p,
+div#main_header_right_half a {
+  color: #cfc259;
+  text-align: center;
+  margin: 0 auto;
+}
+
+div#resume_page_img_div {
+    width: 90%;
+    height: 80%;   
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    margin-bottom: auto;
+    border: 1px solid #9FA3CC;
+    padding-top: -25px;
+    padding-bottom: -25px;
+
+}
+
+img#resume_page_img_img {
+    width: 100%;
+    height: 100%;
 }
