--- a/Personal/static/css/main.css
+++ b/Personal/static/css/main.css
@@ -17,6 +17,9 @@ body {
     flex-direction: column;
     width: 100%;
   }
+  div#connect_page_form_div {
+    width: 90%;
+  }
 }
 
 @media (min-width: 401px) and (max-width: 550px) {
@@ -31,19 +34,25 @@ body {
     flex-direction: column;
     width: 100%;
   }
+  div#connect_page_form_div {
+    width: 85%;
+  }
 }
 
 @media (min-width: 551px) and (max-width: 767px) {
   div#main_header_inner {
-    flex-direction: row;
+    flex-direction: column;
   }
   div#main_header_left_half {
-    flex-direction: row;
-    width: 50%;
+    flex-direction: column;
+    width: 100%;
   }
   div#main_header_right_half {
-    flex-direction: row;
-    width: 50%;
+    flex-direction: column;
+    width: 100%;
+  }
+  div#connect_page_form_div {
+    width: 80%;
   }
 }
 
@@ -59,6 +68,9 @@ body {
     flex-direction: row;
     width: 50%;
   }
+  div#connect_page_form_div {
+    width: 70%;
+  }
 }
 
 @media (min-width: 993px) and (max-width: 1200px) {
@@ -72,6 +84,9 @@ body {
   div#main_header_right_half {
     flex-direction: row;
     width: 50%;
+  }
+  div#connect_page_form_div {
+    width: 60%;
   }
 }
 
@@ -87,6 +102,9 @@ body {
     flex-direction: row;
     width: 50%;
   }
+  div#connect_page_form_div {
+    width: 50%;
+  }
 }
 
 @media (min-width: 1501px) {
@@ -99,6 +117,9 @@ body {
   }
   div#main_header_right_half {
     flex-direction: row;
+    width: 50%;
+  }
+  div#connect_page_form_div {
     width: 50%;
   }
 }
@@ -153,4 +174,10 @@ div#resume_page_img_div {
 img#resume_page_img_img {
     width: 100%;
     height: 100%;
+}
+
+/* Connect Page */
+
+div#connect_page_form_div {
+  margin: 0 auto;
 }
