--- a/Personal/Home/templates/random_word_generator.html
+++ b/Personal/Home/templates/random_word_generator.html
@@ -3,16 +3,17 @@
 {% block random_word_generator %}
 
 
-    <div id="random_word_generator_div" class="container">
+    <div id="random_word_generator_outer_div" class="container">
 
         <p>Here is a quick little script that generates a random sequence of consonants and vowels 
-        in what I like to call a <span style="font-style: italic">"word"</span>. 
-        The script will randomly choose whether to begin the word with a consonant or vowel. 
-        These words are in no way affiliated with the accepted Merriam-Webster dictionary and are 
-        more times than not incoherent.</p>
+        in what I like to call a <span style="font-style: italic">"word"</span>. I say word very loosely because 
+        these words are in no way affiliated with the accepted Merriam-Webster dictionary and are 
+        more times than not incoherent. 
+        I thought it would be a fun little activity to at generate something that will at least catch 
+        your eye in terms of structure.</p>
 
         <form>
-            <button id="random_word_generator_submit_button" type="submit" action="{% url 'random_word_generator' %}" method="get">Generate a Random Word</button>
+            <button id="random_word_generator_submit_button_python" type="submit" action="{% url 'random_word_generator' %}" method="get">Generate a Random Word (Server Side - Python)</button>
         </form>
 
         <div id="random_word_generator_inner_div">
@@ -22,6 +23,24 @@
             <span style="font-style:italic">{{random_word}}</span>
             </h3>
         </div>
+
+        <hr>
+
+        <form>
+            <button id="random_word_generator_submit_button_ajax" type="submit">Generate a Random Word (Client Side - Ajax)</button>
+        </form>
+
+        <div id="random_word_generator_inner_div">
+
+            <h3 id="random_word_generator_random_word"> Random Word: 
+            <hr style="width: 75%; margin: 0 auto;text-align: center; background-color: #cfc259">
+            <span style="font-style:italic">{{random_word}}</span>
+            </h3>
+        </div>
+
+        <hr>
+
+        <a class="project_home_project_description_links" href="{% url 'projects_home_page' %}"><p>Back To Projects Home</p></a>
 
     </div>
 
