--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -19,7 +19,7 @@
     />
     <title>Jarret Laberdee</title>
   </head>
-  <body>
+  <body id="body_id">
     <div id="main_header_outer">
       <div id="main_header_inner">
         <div id="main_header_left_half"><p>Hey, I'm Jarret</p></div>
@@ -45,5 +45,7 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="{% static 'js/random_word_generator.js' %}" type="text/javascript"></script>
   </body>
 </html>
