--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -39,6 +39,7 @@
     {% block thank_you %}{% endblock %}
     {% block project_home_page %}{% endblock %}
     {% block random_word_generator %} {% endblock %}
+    {% block pdf_parser %} {% endblock %}
 
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
@@ -47,5 +48,6 @@
     ></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="{% static 'js/random_word_generator.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/pdf_parser.js' %}" type="text/javascript"></script>
   </body>
 </html>
