broke file upload, needs fixed

--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -40,6 +40,7 @@
     {% block project_home_page %}{% endblock %}
     {% block random_word_generator %} {% endblock %}
     {% block pdf_parser %} {% endblock %}
+    {% block display_content %} {% endblock %}
 
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
