--- a/Personal/Home/templates/project_home_page.html
+++ b/Personal/Home/templates/project_home_page.html
@@ -13,6 +13,16 @@
             <img id="project_home_project_thumbnail_img" src="{% static 'png/Random_Word_Generator.png' %}" alt="Random Word Generator Thumbnail">
         </div>
 
+    <div class="project_home_section">
+        <div class="project_home_project_description_div">
+            <a class="project_home_project_description_links" id="upload_pdf_link" href="{% url 'upload_pdf' %}"><p>PDF Parser</p></a>
+        </div>
+        <div class="project_home_project_thumbnail_div">
+            <img id="project_home_project_thumbnail_img" src="{% static 'png/Random_Word_Generator.png' %}" alt="Random Word Generator Thumbnail">
+        </div>
+
+    </div>
+
     </div>
 
     <hr style="width: 90%; background-color: #6e73ab;">
