Need to fix the second page

--- a/Personal/Home/templates/display_content.html
+++ b/Personal/Home/templates/display_content.html
@@ -1,10 +1,8 @@
 {% extends 'base.html' %}
-{% load staticfiles %}
+{% load static %}
 
 {% block display_content %}
 
-<p>{{file_name}}</p>
-<p>{{entire_file}}</p>
-<p>{{test_cat}}</p>
+<p>You/'re file upload successfully!</p>
 
 {% endblock %}
