--- a/Personal/Home/templates/project_home_page.html
+++ b/Personal/Home/templates/project_home_page.html
@@ -13,6 +13,10 @@
             <img id="project_home_project_thumbnail_img" src="{% static 'png/Random_Word_Generator.png' %}" alt="Random Word Generator Thumbnail">
         </div>
 
+    </div>
+
+    <hr style="width: 90%; background-color: #6e73ab;">
+
     <div class="project_home_section">
         <div class="project_home_project_description_div">
             <a class="project_home_project_description_links" id="upload_pdf_link" href="{% url 'upload_pdf' %}"><p>PDF Parser</p></a>
@@ -23,9 +27,10 @@
 
     </div>
 
-    </div>
-
     <hr style="width: 90%; background-color: #6e73ab;">
+
+
+
 
 </div>
 
