--- a/Personal/Home/templates/pdf_parser.html
+++ b/Personal/Home/templates/pdf_parser.html
@@ -3,16 +3,21 @@
 
 {% block pdf_parser %}
 
-<form id="pdf_parser_file_upload_form_form" action="{% url 'upload_pdf' %}" method="post" enctype="multipart/form-data">
+<div class="container" id="pdf_parser_outer_div">
 
-    {% csrf_token %}
-    {{ form }}
+    <div id="pdf_parser_file_upload_form_container">
 
-    <button id="pdf_parser_file_upload_form_submit_button">Upload PDF</button>
+        <form id="pdf_parser_file_upload_form_form" action="{% url 'upload_pdf' %}" method="post" enctype="multipart/form-data">
 
-</form>
+            {% csrf_token %}
+            {{ form }}
 
-<section>
-    <p>{{ invalid_warning }}<p>
+            <button id="pdf_parser_file_upload_form_submit_button">Upload PDF</button>
+
+        </form>
+
+    </div>
+
+</div>
 
 {% endblock %}
