javascript file size function needs fixed

--- a/Personal/Home/templates/display_content.html
+++ b/Personal/Home/templates/display_content.html
@@ -21,4 +21,13 @@
 
 </div>
 
+<div class="return_link_container">
+
+    <a class="project_home_project_description_links" href="{% url 'upload_pdf' %}"><p>Back To Upload Form</p></a>
+
+    <a class="project_home_project_description_links" href="{% url 'projects_home_page' %}"><p>Back To Projects Home</p></a>
+
+</div>  
+
+
 {% endblock %}
