--- a/Personal/Home/templates/random_word_generator.html
+++ b/Personal/Home/templates/random_word_generator.html
@@ -71,8 +71,11 @@
 
         <hr>
 
-        <a class="project_home_project_description_links" href="{% url 'projects_home_page' %}"><p>Back To Projects Home</p></a>
+        <div class="return_link_container">
 
+            <a class="project_home_project_description_links" href="{% url 'projects_home_page' %}"><p>Back To Projects Home</p></a>
+
+        </div>
     </div>
 
 {% endblock %}
