--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -50,5 +50,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="{% static 'js/random_word_generator.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/pdf_parser.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/pdf_loader.js' %}" type="text/javascript"></script>
   </body>
 </html>
