--- a/Personal/Home/templates/pdf_parser.html
+++ b/Personal/Home/templates/pdf_parser.html
@@ -5,6 +5,16 @@
 
 <div class="container" id="pdf_parser_outer_div">
 
+    <div id="pdf_parser_file_uploader_header">
+
+        <h3>PDF Parser</h3>
+
+        <p>Upload a PDF form to convert it into text</p>
+
+        <p>Currently working a client side search function</p>
+
+    </div>
+
     <div id="pdf_parser_file_upload_form_container">
 
         <form id="pdf_parser_file_upload_form_form" action="{% url 'upload_pdf' %}" method="post" enctype="multipart/form-data">
@@ -15,6 +25,18 @@
             <button id="pdf_parser_file_upload_form_submit_button">Upload PDF</button>
 
         </form>
+
+    </div>
+
+    <div id="pdf_extension_verification_div">
+        
+        <p>The file you are attempting to upload is not in .pdf format. The server side processing will not be able to properly parse the document. Please upload a file with a .pdf extension</p>
+
+    </div>
+
+    <div class="return_link_container">
+
+        <a class="project_home_project_description_links" href="{% url 'projects_home_page' %}"><p>Back To Projects Home</p></a>
 
     </div>
 
