Python file regex needs fixed

--- a/Personal/Home/templates/pdf_parser.html
+++ b/Personal/Home/templates/pdf_parser.html
@@ -28,11 +28,7 @@
 
     </div>
 
-    <div id="pdf_extension_verification_div">
-        
-        <p>The file you are attempting to upload is not in .pdf format. The server side processing will not be able to properly parse the document. Please upload a file with a .pdf extension</p>
-
-    </div>
+    <div id="pdf_extension_verification_div"></div>
 
     <div class="return_link_container">
 
