--- a/Personal/static/css/main.css
+++ b/Personal/static/css/main.css
@@ -101,7 +101,8 @@ body {
 
   /* PDF Upload Page */
 
-  div#pdf_parser_file_upload_form_container {
+  div#pdf_parser_file_upload_form_container,
+  div#pdf_extension_verification_div {
     max-width: 90%;
   }
 
@@ -168,7 +169,8 @@ body {
 
     /* PDF Upload Page */
 
-  div#pdf_parser_file_upload_form_container {
+  div#pdf_parser_file_upload_form_container,
+  div#pdf_extension_verification_div {
     max-width: 70%;
   }
 
@@ -229,7 +231,8 @@ body {
 
   /* PDF Upload Page */
 
-  div#pdf_parser_file_upload_form_container {
+  div#pdf_parser_file_upload_form_container,
+  div#pdf_extension_verification_div {
     max-width: 60%;
   }
 
@@ -290,7 +293,8 @@ body {
 
   /* PDF Upload Page */
 
-  div#pdf_parser_file_upload_form_container {
+  div#pdf_parser_file_upload_form_container,
+  div#pdf_extension_verification_div {
     max-width: 55%;
   }
 
@@ -351,7 +355,8 @@ body {
 
   /* PDF Upload Page */
 
-  div#pdf_parser_file_upload_form_container {
+  div#pdf_parser_file_upload_form_container,
+  div#pdf_extension_verification_div {
     max-width: 45%;
   }
 
@@ -412,7 +417,8 @@ body {
 
   /* PDF Upload Page */
 
-  div#pdf_parser_file_upload_form_container {
+  div#pdf_parser_file_upload_form_container,
+  div#pdf_extension_verification_div {
     max-width: 40%;
   }
 
@@ -506,6 +512,11 @@ a.project_home_project_description_links {
   font-weight: bold;
 }
 
+a.project_home_project_description_links p {
+  padding: 0px;
+  margin: 0px;
+}
+
 a.project_home_project_description_links:hover,
 a.project_home_project_description_links:active {
   color: #cfc259;
@@ -580,6 +591,8 @@ div#pdf_parser_file_uploader_header h3
 
 div#pdf_parser_file_upload_form_container {
   margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
   text-align: center;
   padding: 10px;
   border: 1px #6e73ab solid;
@@ -674,4 +687,9 @@ div.return_link_container {
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+div.return_link_container p {
+  padding: 0px;
+  margin: 0px;
 }
