javascript needs fixed

--- a/Personal/Home/templates/about_me.html
+++ b/Personal/Home/templates/about_me.html
@@ -39,8 +39,16 @@
 
     <div id="resume_page_img_div">
 
-        <img src="{% static 'img/Jarret_Laberdee_Resume.jpg' %}" alt="Jarret Laberdee Resume" id="resume_page_img_img">
+        <img id="resume_page_img_img" src="{% static 'img/Jarret_Laberdee_Resume.jpg' %}" alt="Jarret Laberdee Resume" id="resume_page_img_img">
 
     </div>
+
+    <div id="about_me_click_for_full_size_modal_container">
+
+        <span id="about_me_click_for_full_size_modal_span"></span>
+
+    </div>
+
+    <div id="about_me_full_page_modal_cover"></div>
 
 {% endblock %}
