--- a/Personal/Home/templates/project_home_page.html
+++ b/Personal/Home/templates/project_home_page.html
@@ -10,7 +10,7 @@
             <a class="project_home_project_description_links" id="random_word_generator_link" href="{% url 'random_word_generator' %}"><p>Random Word/Name Generator</p></a>
         </div>
         <div class="project_home_project_thumbnail_div">
-            <img id="project_home_project_thumbnail_img" src="{% static 'png/Random_Word_Generator.png' %}" alt="Random Word Generator Thumbnail">
+            <img class="project_home_project_thumbnail_img" src="{% static 'png/Random_Word_Generator.png' %}" alt="Random Word Generator Thumbnail">
         </div>
 
     </div>
@@ -22,7 +22,7 @@
             <a class="project_home_project_description_links" id="upload_pdf_link" href="{% url 'upload_pdf' %}"><p>PDF Parser</p></a>
         </div>
         <div class="project_home_project_thumbnail_div">
-            <img id="project_home_project_thumbnail_img" src="{% static 'png/Random_Word_Generator.png' %}" alt="Random Word Generator Thumbnail">
+            <img class="project_home_project_thumbnail_img" src="{% static 'png/PDF_Parser.png' %}" alt="Random Word Generator Thumbnail">
         </div>
 
     </div>
