--- a/Personal/Home/templates/random_word_generator.html
+++ b/Personal/Home/templates/random_word_generator.html
@@ -34,7 +34,7 @@
         <hr>
 
         <p><strong>Random Word Generator (Ajax)</strong> - This function is done on the client side language that I am using for this application. 
-        In this example I am using a Javascript Framework called Ajax. 
+        In this example I am using a Javascript Framework called jQuery. 
         Running this function will not refresh the page as everything is done asynchronously between the front 
         and backend languages communicating.</p>
 
