--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -51,5 +51,6 @@
     <script src="{% static 'js/random_word_generator.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/pdf_parser.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/pdf_loader.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/about_me.js' %}" type="text/javascript"></script>
   </body>
 </html>
