--- a/Personal/static/css/main.css
+++ b/Personal/static/css/main.css
@@ -28,6 +28,13 @@ body {
     height: auto;
   }
 
+  /* About Me Page */
+
+  div#about_me_click_for_full_size_modal_container {
+    width: 85%;
+    top: 13.5%;
+  }
+
     /* Project Home Page */
 
   div.project_home_section {
@@ -41,7 +48,7 @@ body {
     width: 50%;
   }
 
-  img#project_home_project_thumbnail_img {
+  img.project_home_project_thumbnail_img {
     width: 100%;
   }
 
@@ -76,6 +83,13 @@ body {
     height: auto;
   }
 
+  /* About Me Page */
+
+  div#about_me_click_for_full_size_modal_container {
+    width: 75%;
+    top: 13.5%;
+  }
+
   /* Project Home Page */
 
   div.project_home_section {
@@ -89,7 +103,7 @@ body {
     width: 100%;
   }
 
-  img#project_home_project_thumbnail_img {
+  img.project_home_project_thumbnail_img {
     width: 90%;
   }
 
@@ -138,6 +152,13 @@ body {
     height: auto;
   }
 
+  /* About Me Page */
+
+  div#about_me_click_for_full_size_modal_container {
+    width: 62.5%;
+    top: 13.5%;
+  }
+
   /* Project Home Page */
 
   div.project_home_section {
@@ -151,7 +172,7 @@ body {
     width: 100%;
   }
 
-  img#project_home_project_thumbnail_img {
+  img.project_home_project_thumbnail_img {
     width: 80%;
   }
 
@@ -206,6 +227,13 @@ body {
     height: auto;
   }
 
+  /* About Me Page */
+
+  div#about_me_click_for_full_size_modal_container {
+    width: 45%;
+    top: 5%;
+  }
+
   /* Project Home Page */
 
   div.project_home_section {
@@ -219,7 +247,7 @@ body {
     width: 50%;
   }
 
-  img#project_home_project_thumbnail_img {
+  img.project_home_project_thumbnail_img {
     width: 100%;
   }
 
@@ -268,6 +296,17 @@ body {
     height: auto;
   }
 
+  /* About Me Page */
+
+  div#about_me_click_for_full_size_modal_container {
+    width: 35%;
+    top: 5%;
+  }
+
+  .enlarged {
+    top: 7%;
+  }
+
   /* Project Home Page */
 
   div.project_home_section {
@@ -281,7 +320,7 @@ body {
     width: 50%;
   }
 
-  img#project_home_project_thumbnail_img {
+  img.project_home_project_thumbnail_img {
     width: 90%;
   }
 
@@ -330,6 +369,13 @@ body {
     height: auto;
   }
 
+  /* About Me Page */
+
+  div#about_me_click_for_full_size_modal_container {
+    width: 30%;
+    top: 5%;
+  }
+
   /* Project Home Page */
 
   div.project_home_section {
@@ -343,7 +389,7 @@ body {
     width: 50%;
   }
 
-  img#project_home_project_thumbnail_img {
+  img.project_home_project_thumbnail_img {
     width: 80%;
   }
 
@@ -392,6 +438,19 @@ body {
     height: auto;
   }
 
+  /* About Me Page */
+
+  div#about_me_click_for_full_size_modal_container {
+    width: 25%;
+    top: 5%;
+  }
+
+  .enlarged {
+    top: 7%;
+    z-index: 0;
+  }
+
+
   /* Project Home Page */
 
   div.project_home_section {
@@ -405,7 +464,7 @@ body {
     width: 50%;
   }
 
-  img#project_home_project_thumbnail_img {
+  img.project_home_project_thumbnail_img {
     width: 75%;
   }
 
@@ -467,20 +526,60 @@ div#main_header_right_half a {
   margin: 0 auto;
 }
 
-div#resume_page_img_div { 
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
-    margin-bottom: auto;
-    border: 1px solid #9FA3CC;
-    padding-top: -25px;
-    padding-bottom: -25px;
+/* About Me Page */
 
+div#resume_page_img_div { 
+    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 0px;
+    z-index: 3;
 }
 
 img#resume_page_img_img {
     width: 100%;
     height: 100%;
+    border: 1px solid #6e73ab;
+    margin: 10px;
+    transition: 1s;
+    z-index: 1;
+}
+
+img#resume_page_img_img:hover {
+  transform: scale(1.075);
+}
+
+div#about_me_click_for_full_size_modal_container {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  background-color: white;
+  padding: 15px;
+  border: 1px solid #6e73ab;
+  border-radius: .375rem;
+  display: none;
+  z-index: -1;
+}
+
+span#about_me_click_for_full_size_modal_span {}
+
+span#about_me_click_for_full_size_modal_span p {
+  padding: 0px;
+  margin: 0px
+}
+
+div#about_me_full_page_modal_cover {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  max-width: 100%;
+  max-height: 100%;
+  margin: 0 auto;
+  background-color: #fff;
+  opacity: .5;
+  z-index: 0;
 }
 
 /* Connect Page */
@@ -492,7 +591,20 @@ div#connect_page_form_div {
 ul#about_me_page_ul {
   text-decoration: none;
   list-style-type: none;
+  padding: 0px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
+
+ul#about_me_page_ul li h5 {
+  text-align: center;
+}
+
+/* .enlarged {
+  position: fixed;
+  height: 50px;
+  width: auto;
+} */
 
 /* Projects Home Page */
 
@@ -505,6 +617,11 @@ div.project_home_section {
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+img.project_home_project_thumbnail_img {
+  /* border: 1px solid #6e73ab; */
+  border-radius: .375rem;
 }
 
 a.project_home_project_description_links {
